# Digital-Space-Store-Web

./: .dockerignore  .env.example  .gitignore  .replit  Dockerfile  README.md  docker-compose.yml  pyproject.toml  replit.md  requirements.txt
app/: chat_agent.py  content_gen.py  database.py  main.py  market_parser.py  models.py
static/css/: admin.css  banner.css  chat.css  electronic.css  fashion.css  footer.css  header.css  jewellery.css  style.css  theme.css
static/js/: custom.js
templates/: add-product.html  admin-login.html  admin.html  banner.html  base.html  cart.html  chat.html  checkout.html  electronic.html  fashion.html  footer.html  index.html  jewellery.html  orders.html  page-category.html  page-single.html  profile.html
