[project]
name = "workspace"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "google-auth>=2.49.2",
    "google-genai>=1.73.1",
    "google-generativeai>=0.8.6",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.45.0",
]
